Fix horizontal scroll

--- a/src/components/nav-link/nav-link.module.scss
+++ b/src/components/nav-link/nav-link.module.scss
@@ -106,6 +106,7 @@ $header-nested-link-color: var(--header-nested-link-color, white);
     transform: translateY(50%);
     opacity: 0;
     pointer-events: none;
+    width: 180px;
   }
 
   ul {
